    - debian/locales-depver: bump to 2.8.
  * Convert all patch to patchlevel -p1.  Closes: #485165.
  * debian/rules.d/quilt.mk: add a refresh target.
  * local/manpages/*: fix comments to make lintian happy.
  * locale/check-unknown-symbols.diff: changes errors to warnings.
  * debian/control.in/main: update Standards-Version to 3.8.0:
    - Add debian/README.source.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 Aug 2008 05:48:15 +0200

glibc (2.7-14) unstable; urgency=low

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2280 (from glibc-bsd).

  [ Aurelien Jarno ]
  * patches/mips/cvs-mknod.diff: new patch from upstream to allow > 255 minors
    on mips.  Closes: #493751.
  * patches/sparc/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on Sparc.  Closes: #295173.
  * patches/hppa/cvs-context.diff: new patch from upstream to add
    getcontext(), setcontext(), makecontext() on PARISC.  Closes: #492778.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-lock-memory-clobber.diff: new patch from upstream
    to fix safety of locks.
  * patches/hurd-i386/local-pthread_posix-option.diff: new patch to advertise
    the libpthread from the hurd packages.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 17:00:36 +0200

glibc (2.7-13) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update Brazilian Portuguese debconf translation, by Felipe Augusto van de
    Wiel.  Closes: #485381.
  * patches/any/cvs-getaddrinfo.diff: new patch from CVS to correctly 
    initialize internal resolver structures in getaddrinfo().  Closes:
    #489586.
  * Update Romanian debconf translation, by Eddy Petrişor.  Closes: #488734.
  * any/cvs-tst-regex.diff: new patch from CVS to add a timeout to tst-regex.
    Closes: #489856.
  * control.in/main: build depends on gcc-4.3 (>= 4.3.0-7), remove
    mips/local-gcc-ice.diff.
  * Update Swedish debconf translation, by Martin Bagge.  Closes: #492191.