@@ -95,31 +95,33 @@ $(stamp)build_%: $(stamp)configure_%
 
 $(patsubst %,check_%,$(GLIBC_PASSES)) :: check_% : $(stamp)check_%
 $(stamp)check_%: $(stamp)build_%
-	if [ -n "$(findstring nocheck,$(DEB_BUILD_OPTIONS))" ]; then \
+	@if [ -n "$(findstring nocheck,$(DEB_BUILD_OPTIONS))" ]; then \
 	  echo "DEB_BUILD_OPTIONS contains nocheck, skipping tests."; \
-	  echo "Tests have been disabled via DEB_BUILD_OPTIONS." > $(log_test) ; \
+	  echo "Tests have been disabled via DEB_BUILD_OPTIONS." > $(log_results) ; \
 	elif [ $(call xx,configure_build) != $(call xx,configure_target) ] && \
 	     ! $(DEB_BUILDDIR)/elf/ld.so $(DEB_BUILDDIR)/libc.so >/dev/null 2>&1 ; then \
 	  echo "Cross compiling, skipping tests."; \
-	  echo "Flavour cross-compiled, tests have been skipped." > $(log_test) ; \
+	  echo "Flavour cross-compiled, tests have been skipped." > $(log_results) ; \
 	elif ! $(call kernel_check,$(call xx,MIN_KERNEL_SUPPORTED)); then \
 	  echo "Kernel too old, skipping tests."; \
-	  echo "Kernel too old, tests have been skipped." > $(log_test) ; \
-	elif uname -m | grep -q "^arm" && uname -r | grep -q "2\.6\.2[1-4]" ; then \
-	  echo "ARM machine running a 2.6.21-24 kernel detected, tests have been skipped."; \
-	  echo "ARM machine running a 2.6.21-24 kernel detected, tests have been skipped." > $(log_test) ; \
+	  echo "Kernel too old, tests have been skipped." > $(log_results) ; \
 	elif [ $(call xx,RUN_TESTSUITE) != "yes" ]; then \
 	  echo "Testsuite disabled for $(curpass), skipping tests."; \
-	  echo "Tests have been disabled." > $(log_test) ; \
+	  echo "Tests have been disabled." > $(log_results) ; \
 	else \
 	  echo Testing $(curpass); \
-	  echo -n "Testsuite started: " | tee -a $(log_test); \
-	  date --rfc-2822 | tee -a $(log_test); \
-	  echo "--------------" | tee -a $(log_test); \
+	  find $(DEB_BUILDDIR) -name '*.out' -exec rm {} ';' ; \
 	  TIMEOUTFACTOR="$(TIMEOUTFACTOR)" $(MAKE) -C $(DEB_BUILDDIR) $(NJOBS) -k check 2>&1 | tee -a $(log_test); \
-	  echo "--------------" | tee -a $(log_test); \
-	  echo -n "Testsuite ended: " | tee -a $(log_test); \
-	  date --rfc-2822 | tee -a $(log_test); \
+	  chmod +x debian/testsuite-checking/convertlog.sh; \
+	  debian/testsuite-checking/convertlog.sh $(log_test) > $(log_results) ; \
+	  if -f $(log_expected) ; then ; \
+	    chmod +x debian/testsuite-checking/compare.sh ; \
+	    debian/testsuite-checking/compare.sh $(log_expected) $(log_results) ; \
+	  else \
+	    echo "***WARNING***" ; \
+	    echo "Please generate expected testsuite results for this arch!" ; \
+	    echo "***WARNING***" ; \
+	  fi ; \
 	fi
 	touch $@
 
