@@ -1,0 +1,17 @@
+Testsuite Regression Testing
+============================
+
+This directory contains a file for each arch/os, listing the allowed failures
+during a testsuite run for a given arch/os pair. The files are listed as
+"${arch-os}-test-results".  Where "${arch-os}" is extracted by rules as 
+"$(call xx,configure_target)".
+
+A script, "convertlog.sh", can be used to process the normal log-test-*
+file into a test-results-* file.
+
+Since we cannot run the testsuite without "-k", we run the enitre testsuite
+ignoring errors. Then we compare the error set with the expected errors, 
+differences in signal numbers or errors fails the build. If the architecture
+does not have a test-results-* file a warning is given and no comparison is
+made.
+
