@@ -1,0 +1,7 @@
+#
+# Allowed failures for AMD64 and the returned make failure
+# number, indicating the signal the process died with.
+# Format: <Failed test>, Error <Make error code> [(ignored)]
+#
+annexc.out, Error 1
+check-localplt.out, Error 1
