@@ -70,6 +70,9 @@ glibc (2.8~20080808-1) UNRELEASED; urgency=low
   * locale/check-unknown-symbols.diff: changes errors to warnings.
   * debian/control.in/main: update Standards-Version to 3.8.0:
     - Add debian/README.source.
+  * debian/rules, debian/rules.d/build.mk, debian/testsuite-checking/*:
+    implementregression check, based on a patch from Carlos O'Donell.
+  * testsuite-checking/expected-test-x86_64-linux-gnu-libc: new file.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 08 Aug 2008 05:48:15 +0200
 
